Updated Index to MASON std, Moved adjustlack to agent, added remove the dead option
The index file hadn't been in the right format for MASON... changing
this TO the right format doesn't seem to have helped any with the About
tab not being filled in.
Adjust Lack was being handled both in the network processing and in the
agent, moved that to just in the agent to avoid issues such as 6+3-4 = 3
(lack caps at 7) The result should be 5. This makes a big difference
with the movement of lack and was a bug.
The model can now choose if it wants to keep those who died of HIV on
the counter for population growth.

--- a/src/hivMicroSim/index.html
+++ b/src/hivMicroSim/index.html
@@ -1,21 +1,17 @@
-<!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
+<html><head></head><body>
+<table border=0 cellspacing=0 cellpadding=6>
+<tr>
+<h2>HIV Simulation</h2> 
+By Laura Manuel
+</table>
+
+<p>This is a simulation of HIV transmission through a sexual network. 
+    
+<p>Adjust the population dynamics and agent behavior to see how HIV spreads through the model. 
+
+<!-  Note these can't be aref stuff because Java's simple 
+     web browser code doesn't know how to handle PDFs etc.
+     Just stick to images and HTML files in your links.
 -->
-<html>
-    <head>
-        <title>HIV Simulation</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>
-            <p>
-                This is a simulation that attempts to model the spread of HIV through a population.
-            </p>
-        
-        </div>
-    </body>
-</html>
+
+</body></html>
